[package]
name = "boba"
version = "0.1.0"
edition = "2021"
description = "Boba programming language"
authors = ["Your Name"]

[dependencies]
# Lexing and parsing
logos = "0.13.0"       # For lexical analysis
chumsky = "0.9.2"      # For parsing
ariadne = "0.3.0"      # For error reporting

# Runtime and execution
im = "15.1.0"          # Immutable data structures
thiserror = "1.0.40"   # Error handling
clap = { version = "4.3.0", features = ["derive"] } # Command line argument parsing

[dev-dependencies]
insta = "1.29.0"       # Snapshot testing
